welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:24: error: only classes can have declared but undefined members
do {def hunt()} while(!estSurBiscuit)
        ^